[package]
name = "bisonmq"
version = "0.1.2"
edition = "2021"

authors = [ "Leaf48" ]
description = "A Lightweight and Simple Rust Library for Job Queue"
repository = "https://github.com/Leaf48/BisonMQ"
keywords = [ "queue", "background-jobs", "redis" ]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
redis = "0.28.2"